@@ -1,3 +1,13 @@
+2007-06-12  Don Scorgie  <dscorgie@svn.gnome.org>
+
+	* src/yelp-utils.c: 
+	Add ghelp resolve support
+	Many minor fixes to pass default test suite
+
+	* src/test-resolver.c: 
+	Add default tests
+
+	
 2007-06-11  Don Scorgie  <dscorgie@svn.gnome.org>
 
 	* src/yelp-utils.c: 
